    Note, once set the engine won't call `QueryNanoPiece` anymore and instead randomly toggles between the set nanopieces,
    saving a lot time-consuming COB/LUS calls.
 ! LUS/COB: cache QueryNanoPiece() results
    Note, this stops QueryNanoPiece() calls after 31 times no matter what!
    This breaks ZK's LupsNanoSpray, fixed version can be found here http://gw.gd/Zaae.

Models:
 - Assimp parsed models now support a 2nd texcoord

Weapons/WeaponDefs:
 ! remove of manualBombSettings (backward-compability code in weapondefs_post.lua)
 ! fix: half craterAreaOfEffect the same way as it is done with damageAreaOfEffect
 ! removed color1 (hue) & color2 (sat). Use rgbColor instead!
 ! removed isShield. Use weaponType="Shield" instead!
 - new 'interceptSolo', if true (=default) don't allow any other interceptors to target the same projectile
 - allow any weapons to be interceptors/targetables (not that all combinations work/make sense)
 ! stop subs/AA-fighters trying to chase hovers and tanks (check all equipped weapons if they can target the unit, before _auto_ chasing enemies in FireAtWill)
 ! all weapons will now obey avoidFriendly, avoidNeutral, avoidFeature + avoidGround
 ! add new avoidGround weapondef tag (default true)

FeatureDefs:
 ! remove "nodrawundergray" now that there is a proper "floating" tag

GameServer:
 - a new GameID tag to script.txt
 ! default enable AllowAdditionalPlayers
 ! always account local players (even when host is a spectator!)
 ! don't lower-limit gameSpeed to `userSpeedFactor * 0.5f` when userSpeedFactor is greater than 2
 - make game ways more responsive when running at high speeds

Misc:
 - add /ReloadShaders
 - less jerky camera transitions (thx cleanrock)
 - make camera a bit smoother by adding some micro-transitions
 - pressing F5 no longer hides the minimap in dualscreen mode (#3095)
 - SMF/MapInfo: new tag voidGround
 - fix 'only FreeCamera allows to set FOV ingame' (3291)
 - do not spam unit self-destruct messages when spectating