@@ -72,7 +72,9 @@ private:
 	static void BuildPieceHierarchy(S3DModel* model);
 	static void CalculateRadius(S3DModel* model);
 	static void CalculateHeight(S3DModel* model);
+	static void CalculateMidPos(S3DModel* model);
 	static void CalculateMinMax(S3DModelPiece* piece);
+	static void FindTextures(S3DModel* model, const aiScene* scene, const LuaTable& metaTable, const std::string& modelFilePath);
 	static void LoadPieceTransformations(SAssPiece* piece, const LuaTable& metaTable);
 	
 	void CalculatePerMeshMinMax(SAssModel* model);
